flipswitch/core/main/default/objects/FlipSwitch_Inventory_Claim__c/FlipSwitch_Inventory_Claim__c.object-meta.xml
<CustomObject>
    <description>FlipSwitch inventory claim records track which users have claimed a slot in an Inventory-type feature flag.</description>
    <label>FlipSwitch Inventory Claim</label>
    <nameField>
        <label>Claim Name</label>
        <type>AutoNumber</type>
        <displayFormat>CLAIM-{0000}</displayFormat>
    </nameField>
    <pluralLabel>FlipSwitch Inventory Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>