flipswitch/core/main/default/objects/FlipSwitch_Inventory_Claim__c/fields/Claim_Key__c.field-meta.xml
<CustomField>
    <fullName>Claim_Key__c</fullName>
    <label>Claim Key</label>
    <description>Compound key of Flag_Key + User_Id for uniqueness enforcement. Set by Apex before insert.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>