flipswitch/core/main/default/objects/FlipSwitch_Inventory_Claim__c/fields/Flag_Key__c.field-meta.xml
<CustomField>
    <fullName>Flag_Key__c</fullName>
    <label>Flag Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>