flipswitch/core/main/default/objects/FlipSwitch_Inventory_Claim__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User ID</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>